# LightVC

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONCEPT.md  CONCEPT_JA.md  Cargo.toml  DESIGN.md  MODEL_TRAINING.md  README.md  RESEARCH.md  dev.ps1  package-lock.json
crates/lightvc-app/: Cargo.toml
crates/lightvc-app/assets/icons/: icon.icns
crates/lightvc-app/src/: app.rs  assets.rs  audio_playback.rs  cli.rs  file_pick.rs  main.rs  offline_tab.rs  realtime_tab.rs  theme.rs  voice_catalog.rs  widgets.rs
crates/lightvc-audio/: Cargo.toml
crates/lightvc-audio/src/: engine.rs  lib.rs  resample.rs  ringbuf.rs  stream.rs
crates/lightvc-clap/: Cargo.toml  build.rs
crates/lightvc-clap/src/: lib.rs
crates/lightvc-core/: Cargo.toml
crates/lightvc-core/examples/: bench_dac.rs  bench_dac_cuda.rs  bench_freec_stream.rs  bench_pipeline.rs  bench_utte.rs  cuda_full_pipeline.rs  decoder_finetune_parity.rs  parity_test.rs  snr_diagnostic.rs  stream_test.rs
crates/lightvc-core/src/: b1_pipeline.rs  codec.rs  converter.rs  dac_model.rs  flow_converter.rs  free_resynth.rs  free_vocoder.rs  lib.rs  mel.rs  pipeline.rs  soft_rvq.rs  streaming.rs  utte_adapter.rs  weights.rs
crates/lightvc-core/tests/: chunk_stream_freeC.rs  e2e_resynth_freeC.rs  mel_parity_freeC.rs  parity_freeC.rs  parity_freebig.rs
crates/lightvc-vst/: Cargo.toml
crates/lightvc-vst/src/: lib.rs
crates/lightvc-xtask/: Cargo.toml
crates/lightvc-xtask/src/: main.rs
current/: README.md  RESEARCH.md  ROADMAP.md  candle_vocoder_port.md  gui_design.md  hybrid_dsp_vocoder_survey.md  kansei_vocoder.md  vocoder.md  zeroshot_vc.md
docs/: ASIO_SETUP.md  ASSETS_SPEC.md  ASSETS_SPEC_V2.md  GUI_DESIGN.md  INNOVATION.md  MANUAL.md  UI_GUIDE_JA.md  c2_2_source_leakage_design.md  concept_voice_synth_thesis_2026-06-27.md  fig_gen.typ  fig_infer.typ  fig_train.typ  lightvc_cipt_article.typ  literature_update_2026-06-21.md  m3b_architecture.typ  paper_trial_report_2026-06-24.md  r2_mini_report_2026-06-29.md  research_report_2026-06-20.md
docs/screenshots/: .gitkeep
kansei/: schema.sql
kansei/config/: axes.yaml  golden_set.yaml
kansei/scripts/: analyze_audio.py
models/: README.md  mel_basis_44k_2048_128.safetensors
plan/: 00_README.md  01_crate_structure.md  02_streaming_lookahead.md  03_converter_model.md  04_training_pipeline.md  05_audio_io.md  06_plugin_app.md  07_unimplemented_phases.md  08_known_bugs.md  09_architecture_overhaul.md  10_analysis_resynthesis.md  11_source_filter_vc.md  12_concept_v2.md  13_realtime_singing_redesign.md
results/: code_lookup_vc_test.json  code_stats_vc_test.json  cross_text_eval.json  decoder_finetuned_parity.safetensors  depth_surgery.json  e0_diag.json  e0_discriminator_hunt.json  e0_modhunt.json  e0_oracle_ltv.json  e1_overfit_ltv.json  e2_ltv_eval.json  e2_ltv_eval_a.json  e2_ltv_eval_b.json  e2_ltv_eval_c.json  e2_ltv_eval_e.json  e2_ltv_eval_e300.json  e2_ltv_eval_espec.json  e2_ltv_eval_gan.json  e2_ltv_eval_gan2.json  e2_ltv_eval_ganlc0.json  e2_ltv_eval_ganlong.json  e2_triage.json  nsf3_scoreboard.json  phase3b_empirical_error_n50.json  phase3b_grad_audit_eval.json  phase3b_grad_audit_train.json  phase3b_tolerance_smoke50.json  phase3c_ao_10k_full_eval.json  phase3c_ao_a3_margin_full_eval.json  phase3c_ao_b1_ecapa_full_eval.json  phase3c_b1_adapter_bench.json  phase3c_full_eval_best.json  r2_mini_decoder_eval.json  r2full_b1_eval.json  r2full_decoder_eval.json  streaming_eval.json  streaming_eval_full.json  streaming_finetuned_dec.json  streaming_frozen_dec.json
samples/: README.md
samples/streaming_eval/: metrics.json
tools/: capture-window.ps1  list-windows.ps1  snap.ps1
training/: README.md  aa.py  afhn.py  annot_gui.py  articulatory_clone_poc.py  articulatory_probe.py  audit_decoder.py  b_oracle_rerank.py  bank_size_diag.py  bench_phase3c_adapter.py  build_ab_session.py  build_canonical_manifest.py  build_formant_cache.py  build_golden_set.py  build_vctk_manifest.py  c1_dtw_retrieval.py  causal_encoder_poc.py  collapse_diag.py  component_swap.py  compute_fratio.py  compute_profiles.py  converter.py  create_manifest.py  diagnose_flow.py  diagnose_velocity.py  download_corpus.py  dtw_oracle_fix.py  e0_discriminator_hunt.py  e0_oracle_ltv.py  e1_overfit_ltv.py  e1_smoothing.py  e2_e3_register.py  e2_triage.py  e5_coverage.py  encode_corpus.py  encode_female_dataset.py  eval_code_lookup_vc.py  eval_code_stats_vc.py  eval_cross_text.py  eval_decoder_streaming.py  (+104 more)
training/configs/: knn_distill.yaml  phase_b.yaml  phase_b_smoke.yaml  phase_b_utte.yaml  phase_c.yaml  phase_c_bf16_verify.yaml  phase_c_smoke.yaml  phase_c_utte.yaml  phase_d.yaml
training/results/: b_oracle_rerank.json  c1_dtw_retrieval.json  collapse_diag.json  component_swap.json  dtw_oracle_200.json  e1_smoothing.json  e2_e3_register.json  large_eval_200.json  oracle_sf.json  phase1_rvq_swap.json  phase1b_requant.json  phase2a_oracle_sweep.json  phase2b_latent_retrieval.json  phase2c_content_dtw.json  phase2d_cross_text.json  phase2e_unit_retrieval.json  reranker_heuristic.json  reranker_learned.json  retrieval_v2.json  retrieval_v2_1.json  retrieval_v2_2.json  timbre_bank_ablation.json  timbre_bank_oracle.json
