[project]
name = "lightvc-training"
version = "0.1.0"
description = "LightVC training pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "triton-xpu==3.6.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "datasets",
    "scikit-learn",
    "huggingface-hub>=1.19.0",
    "edge-tts>=7.2.8",
    "asyncio>=4.0.0",
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
triton-xpu = { index = "pytorch-xpu" }
