[package]
name = "lightvc-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightvc-core = { path = "../lightvc-core" }
lightvc-audio = { path = "../lightvc-audio" }
candle-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
hound.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
eframe = "0.34"
egui-file-dialog = "0.10"
rfd = "0.15"
crossbeam-channel.workspace = true
rtrb.workspace = true
cpal = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = []
cuda = ["lightvc-core/cuda"]
metal = ["lightvc-core/metal"]
asio = ["cpal/asio"]
