[package]
name = "lightvc-clap"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "LightVC-X CLAP/VST3 voice conversion plugin"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
lightvc-core = { path = "../lightvc-core" }
candle-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
crossbeam-channel.workspace = true
rtrb.workspace = true
nice-plug = "0.1"
nice-plug-egui = "0.1"
egui = "0.34"
clap-wrapper = "0.3"

[features]
default = ["vst3"]
vst3 = ["clap-wrapper/vst3"]
auv2 = ["clap-wrapper/auv2"]
cuda = ["lightvc-core/cuda"]

[build-dependencies]
clap-wrapper = "0.3"
