[package]
name = "lightvc-vst"
version.workspace = true
edition.workspace = true
license = "GPL-3.0"
description = "LightVC-X VST3 voice conversion plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
lightvc-core = { path = "../lightvc-core" }
candle-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
crossbeam-channel.workspace = true
rtrb.workspace = true
nice-plug = { version = "0.1", features = ["vst3"] }
nice-plug-egui = "0.1"
egui = "0.34"

[features]
default = []
cuda = ["lightvc-core/cuda"]
